--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "npm run build"
+    "build": "vite build"
   },
   "devDependencies": {
     "vite": "^4.3.9"
